<resources>
    <string name="app_name">FamilyMap</string>
    <string name="filter">Filter</string>
    <string-array name="colors"> <!--example-->
        <item>Choose a Color</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="map_types">
        <item>Hybrid</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
    <string name="title_activity_person">PersonActivity</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gender">gender</string>
    <string name="gender_hint">Male/Female</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="location_hint">Location</string>
    <string name="name_hint">Name</string>
    <string name="group_item_hint">GROUP ITEM</string>
    <string name="relationship_hint">Relationship</string>
    <string name="event_information_hint">event information</string>
    <string name="go_to_top">Go to Top</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_story_lines_hint">Show/Hide Story Lines</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_tree_lines_hint">Show/Hide Family Tree Lines</string>
    <string name="spouse_lines">Spouse LInes</string>
    <string name="show_spouse_lines_hint">Show Tree Lines</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_hint">Choose how the map is displayed</string>
    <string name="sync_data">Sync Data</string>
    <string name="sync_data_hint">from FamilyMap Server</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Return to Login Screen</string>
    <string name="filter_title">Filter Title</string>
    <string name="filter_description">Filter Description</string>
</resources>
